@@ -28,6 +28,9 @@
 #import <mach-o/arch.h>
 #include <sys/sysctl.h>
 #include <pwd.h>
+#include <stdio.h>
+#include <stdlib.h>
+
 typedef struct kinfo_proc kinfo_proc;
 
 #undef  ql_component
@@ -448,6 +451,116 @@ static int GetBSDProcessList(kinfo_proc **procList, size_t *procCount)
     free(mylist);
     
     return [NSArray arrayWithArray:processes];
+}
+
++ (NSString *)argsStringForPID:(int)pid
+{
+	NSString *result = @"";
+	
+	int		mib[3], argmax, nargs, c = 0;
+	size_t	size;
+	char    *procargs, *sp, *np, *cp;
+	int		show_args = 1;
+
+	fprintf(stderr, "Getting argv of PID %d\n", pid);
+
+	mib[0] = CTL_KERN;
+	mib[1] = KERN_ARGMAX;
+
+	size = sizeof(argmax);
+	if (sysctl(mib, 2, &argmax, &size, NULL, 0) == -1)
+	{
+		NSLog(@"Sorry, failed");
+		return result;
+	}
+
+	/* Allocate space for the arguments. */
+	procargs = (char *)malloc(argmax);
+	if (procargs == NULL)
+	{
+		NSLog(@"Sorry, failed");
+		return result;
+	}
+
+	mib[0] = CTL_KERN;
+	mib[1] = KERN_PROCARGS2;
+	mib[2] = pid;
+
+
+	size = (size_t)argmax;
+	if (sysctl(mib, 3, procargs, &size, NULL, 0) == -1)
+	{
+		free(procargs);
+		return result;
+	}
+
+	memcpy(&nargs, procargs, sizeof(nargs));
+	cp = procargs + sizeof(nargs);
+
+	/* Skip the saved exec_path. */
+	for (; cp < &procargs[size]; cp++)
+	{
+		if (*cp == '\0') break; /* End of exec_path reached. */
+	}
+	
+	if (cp == &procargs[size])
+	{
+		free(procargs);
+		return result;
+	}
+
+	/* Skip trailing '\0' characters. */
+	for (; cp < &procargs[size]; cp++)
+	{
+		if (*cp != '\0') break; /* Beginning of first argument reached. */
+	}
+	
+	if (cp == &procargs[size])
+	{
+		free(procargs);
+		return result;
+	}
+	
+	/* Save where the argv[0] string starts. */
+	sp = cp;
+
+	/*
+	 * Iterate through the '\0'-terminated strings and convert '\0' to ' '
+	 * until a string is found that has a '=' character in it (or there are
+	 * no more strings in procargs).  There is no way to deterministically
+	 * know where the command arguments end and the environment strings
+	 * start, which is why the '=' character is searched for as a heuristic.
+	 */
+	for (np = NULL; c < nargs && cp < &procargs[size]; cp++)
+	{
+		if (*cp == '\0')
+		{
+			c++;
+			if (np != NULL) {
+				/* Convert previous '\0'. */
+				*np = ' ';
+			} else {
+				/* *argv0len = cp - sp; */
+			}
+			/* Note location of current '\0'. */
+			np = cp;
+
+			if (!show_args)
+			{
+				/*
+				 * Don't convert '\0' characters to ' '.
+				 * However, we needed to know that the
+				 * command name was terminated, which we
+				 * now know.
+				 */
+				break;
+			}
+		}
+	}
+	
+	result = [NSString stringWithUTF8String:sp];
+	//printf("%s\n", sp);
+	return result;
 }
 
 + (void)killTaskUsingName:(NSString *)aTaskName
