@@ -14,6 +14,8 @@ NS_ASSUME_NONNULL_BEGIN
 
 @property (weak) IBOutlet NSTableView *tableView;
 
+- (IBAction)scanForPatches:(id)sender;
+
 @end
 
 NS_ASSUME_NONNULL_END
